force-app/main/default/objects/KimbleOne__RollupDefinition__c/KimbleOne__RollupDefinition__c.object-meta.xml
<CustomObject>
    <label>Rollup Definition</label>
    <nameField>
        <label>Rollup Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Definitions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>