force-app/main/default/objects/KimbleOne__RollupDefinition__c/fields/KimbleOne__Factor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Factor__c</fullName>
    <label>Factor</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>