force-app/main/default/objects/KimbleOne__RollupDefinition__c/fields/KimbleOne__FieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FieldName__c</fullName>
    <label>FieldName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>