force-app/main/default/objects/KimbleOne__RollupDefinition__c/fields/KimbleOne__RollupDefinitionType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RollupDefinitionType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rollup Definition Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RollupDefinitionType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Rollup Definitions</relationshipLabel>
    <relationshipName>RollupDefinitions</relationshipName>
    <type>Lookup</type>
</CustomField>