force-app/main/default/objects/KimbleOne__RollupDefinition__c/fields/KimbleOne__RollUpObject__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RollUpObject__c</fullName>
    <label>RollUpObject</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>