force-app/main/default/objects/KimbleOne__RollupDefinition__c/fields/KimbleOne__RollupScope__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RollupScope__c</fullName>
    <label>Rollup Scope</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>